🎨 Fixed overflow and problems with body and html height that were breaking design

--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body {
-    height: 100%;
-}
 #root {
-    height: 100%;
-    width: 100%;
     overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
